test/typechecker.d/invalid/poly2.surc.bad
f(x: forall A. A) = x: forall A. A
